# AIA

./: CHANGELOG.md  README.md  pyproject.toml
src/aia/: __init__.py  cli.py  models.py
src/aia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/aia/analyzers/: __init__.py  aaip.py  credential_scope.py  exposure.py  spoofing.py  trust_chain.py
src/aia/reporters/: __init__.py  graph.py  html.py  terminal.py
src/aia/scanners/: __init__.py  a2a.py  anthropic_agents.py  autogen.py  base.py  copilot_studio.py  crewai.py  langchain.py  langgraph.py  mcp.py  openai_agents.py  openclaw.py  pi_agent.py
src/aia_tool.egg-info/: PKG-INFO  SOURCES.txt
