[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aia-tool"
version = "0.3.0"
description = "Agent Identity Auditor - Map trust chains, analyze credential scope, and detect identity spoofing in AI agent deployments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy McHugh"}]
keywords = ["security", "ai", "agents", "identity", "authentication", "trust-chain", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "json5>=0.9",
]

[project.scripts]
aia = "aia.cli:main"

[project.urls]
Homepage = "https://mchugh.ai"
Repository = "https://github.com/j-mchugh/AIA"
Issues = "https://github.com/j-mchugh/AIA/issues"

[tool.setuptools.packages.find]
where = ["src"]
